--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -85,7 +85,7 @@
   <div class="col-md-6 col-xl-3 mb-3 mb-md-4 mb-xl-0">
     <div class="statcard statcard-danger">
       <div class="p-3">
-        <span class="statcard-desc">Downloads</span>
+        <span class="statcard-desc">Resolved Tickets</span>
         <h2 class="statcard-number">
           758
           <small class="delta-indicator delta-negative">1.3%</small>
@@ -119,7 +119,7 @@
   <div class="col-md-6 col-xl-3 mb-3 mb-md-4 mb-xl-0">
     <div class="statcard statcard-warning">
       <div class="p-3">
-        <span class="statcard-desc">Downloads</span>
+        <span class="statcard-desc">Unique Visitors</span>
         <h2 class="statcard-number">
           758
           <small class="delta-indicator delta-negative">1.3%</small>
@@ -141,7 +141,7 @@
   <div class="col-md-6 mb-5">
     <div class="list-group mb-3">
       <h6 class="list-group-header">
-        Largest Project by KLOC
+        Largest Project by Task Count
       </h6>
       
         <a class="list-group-item list-group-item-action justify-content-between" href="#">
@@ -270,7 +270,7 @@
 
 <div class="list-group mb-3">
   <h6 class="list-group-header">
-    Devices and resolutions
+    Projects Generating the Most Interest
   </h6>
   
     <a class="list-group-item list-group-item-action justify-content-between" href="#">
