--- a/templates/ticket-history.html
+++ b/templates/ticket-history.html
@@ -151,12 +151,12 @@
       {% for ticket in ticket_list %}
       <tr>
         <td><input type="checkbox" class="select-row"></td>
-        <td><a href="{% url 'ticket_detail' ticket.id %}">{{ ticket.id }}</a></td>
-        <td>{{ ticket.title }}</td>
+        <td>{{ ticket.id }}</a></td>
+        <td><a href="{% url 'ticket_detail' ticket.id %}">{{ ticket.title }}</td>
         <td>{{ ticket.commentary }}</td>
         <td>{{ ticket.project}}</td>
         <td>{{ ticket.get_status_display }}</td>
-        <td>{{ ticket.difficulty }}</td>
+        <td>{{ ticket.get_difficulty_display }}</td>
       </tr>
       {% endfor %}
       
