--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         *width: 100%;
       }
     </style>
-    <title>{% block title %}My App{% endblock title %}</title>
+    <title>{% block title %}QlickBook{% endblock title %}</title>
 </head>
 <body>
   <div class="container"><div class="row">
