--- a/templates/icon-nav.html
+++ b/templates/icon-nav.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="">
     <meta name="author" content="">
 
-    <title>{% block title %}{% endblock title %} &middot; </title>
+    <title>{% block title %}{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
     
