--- a/templates/projects/list.html
+++ b/templates/projects/list.html
@@ -61,11 +61,11 @@
                   data-dataset="[ {% for count in project.count %}
                     {{count}},
                     {% endfor %}]"
-                  data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e', 'black'] }"
+                  data-dataset-options="{ borderColor: '#252830', backgroundColor: ['#1ca8dd', '#1bc98e'] }"
                   data-labels="['Completed','In-Progress','Not-Started']">
                 </canvas>
-                <strong class="text-muted">{{ project.description }}</strong>
                 <a href="{% url 'project_detail' project.id %}"><h4>{{ project.title }}</h4></a>
+                <strong class="text-muted">{{ project.description }}</strong>
                 </div>
               </div>
             {% empty %}
