--- a/templates/sprints/list.html
+++ b/templates/sprints/list.html
@@ -4,12 +4,31 @@
 
 {% block content %}
     <h1>Sprints</h1>
-    {% for sprints in sprint_list %}
-        <h3>{{ sprint.title }}</h3>
+    {% for sprint in sprint_list %}
+    <h4>{{ sprint.title }}</h4>
         <h4>{{ sprint.status }}</h4>
         <p>{{ sprint.commentary }}</p>
         <p>{{sprint.project}}</p>
-    {% empty %}
-    <p>Relax its over for now... or you can <a href="{% url 'sprint_new' %}">create a sprint</a></p>
+        <div class="col-md-6 col-xl-3 mb-3 mb-md-4 mb-xl-0">
+            <div class="statcard statcard-info">
+                <div class="p-3">
+                    <span class="statcard-desc">Resolved Tickets</span>
+                    <h2 class="statcard-number">
+                        758
+                        <small class="delta-indicator delta-negative">1.3%</small>
+                    </h2>
+                    <hr class="statcard-hr mb-0">
+                </div>
+                <canvas id="sparkline1" width="178" height="44" class="sparkline"
+                data-chart="spark-line"
+                data-dataset="[[15,12,11,8,8,4,1,0]]"
+                data-labels="['','Quarter 1','','Quarter 2','','Quarter 3','Final Due']"
+                style="width: 189px; height: 47px;"></canvas>
+            </div>
+        </div>
+        <a class="btn btn-primary btn-sm" href="{% url 'sprint_detail' sprint.id %}">Details</a>
+        {% empty %}
+        <p>Relax its over for now... or you can <a href="{% url 'sprint_new' %}">create a sprint</a></p>
     {% endfor %}
+
 {% endblock content %}
