--- a/templates/projects/detail.html
+++ b/templates/projects/detail.html
@@ -60,7 +60,7 @@
 
     <div class="tab-content">
       <div role="tabpanel" class="tab-pane active" id="traffic">
-       <div class="table-responsive">
+      <div class="table-responsive">
         <table class="table table-inverse" data-sort="table">
           <thead class="thead-inverse">
             <tr>
@@ -70,6 +70,8 @@
               <th>Decription</th>
               <th>Status</th>
               <th>Difficulty</th>
+              <th>Sprint</th>
+              <th>Assigned To</th>
             </tr>
           </thead>
           <tbody>
@@ -81,6 +83,13 @@
               <td>{{ ticket.commentary }}</td>
               <td>{{ ticket.get_status_display }}</td>
               <td>{{ ticket.get_difficulty_display }}</td>
+              <td>{{ ticket.sprint }}</td>
+              <td>{% for assigned in ticket.assigned_to.all %}
+                <div class="col-sm">
+                {{assigned}}
+              </div>
+              {% endfor %}
+              </td> 
             </tr>
             {% endfor %}
       
@@ -95,7 +104,7 @@
             <div class="d-flex justify-content-center">
               <div class="col-md-8 mb-4 mb-md-3">
               {% for sprint in sprint_list %}
-              <p>{{ sprint.title }}</p>
+              <p><a href="{% url 'sprint_detail' sprint.id %}">{{ sprint.title }}</a></p>
               <p>{{ sprint.end_date }}</p>
               <p>{{ sprint.get_duration_display }}</p>
               <p>Tickets to complete in sprint</p>
