--- a/templates/sprints/list.html
+++ b/templates/sprints/list.html
@@ -6,29 +6,38 @@
     <h1>Sprints</h1>
     {% for sprint in sprint_list %}
     <h4>{{ sprint.title }}</h4>
-        <h4>{{ sprint.status }}</h4>
-        <p>{{ sprint.commentary }}</p>
-        <p>{{sprint.project}}</p>
-        <div class="col-md-6 col-xl-3 mb-3 mb-md-4 mb-xl-0">
-            <div class="statcard statcard-info">
-                <div class="p-3">
-                    <span class="statcard-desc">Resolved Tickets</span>
-                    <h2 class="statcard-number">
-                        758
-                        <small class="delta-indicator delta-negative">1.3%</small>
-                    </h2>
-                    <hr class="statcard-hr mb-0">
-                </div>
-                <canvas id="sparkline1" width="178" height="44" class="sparkline"
-                data-chart="spark-line"
-                data-dataset="[[15,12,11,8,8,4,1,0]]"
-                data-labels="['','Quarter 1','','Quarter 2','','Quarter 3','Final Due']"
-                style="width: 189px; height: 47px;"></canvas>
-            </div>
-        </div>
+    <h4> End Date : {{ sprint.end_date }}</h4>
+    <h5> Project: {{sprint.project}}</h5>
+    <p>{{sprint.}}</p>
+        <p> Creator: {{ sprint.created_by }}</p>
+        <p> Current Milestone : {{sprint.get_milestone_display}}</p>
         <a class="btn btn-primary btn-sm" href="{% url 'sprint_detail' sprint.id %}">Details</a>
         {% empty %}
         <p>Relax its over for now... or you can <a href="{% url 'sprint_new' %}">create a sprint</a></p>
-    {% endfor %}
+        {% endfor %}
+        
+        {% endblock content %}
+        <!-- <div class="col-lg-14 mx-auto">
+            <div class="list-group mx-auto">
+            <h6 class="list-group-header">
+                Current Sprint
+            </h6>
+            
+                <a class="list-group-item list-group-item-action justify-content-between" href="#">
+                <span class="list-group-progress" style="width: {% for ticket in sprint %} {{count}} {% endfor %}  % ;"></span>
+                <span>Current Sprint</span>
+                {% comment %} <span class="text-muted"> {% with sprint={{count|length}} %}
+                    {% with progress={{count[2]|length}} %}
+                    {{ sprint }} / {{ progress }} %
+                    {{ sprint }} % {{ progress }}
+                    {% endwith %} {% endcomment %}
+                    %</span>
+                </a>
 
-{% endblock content %}
+                {% for record in sprints_tasks %}
+                    <h4>{{record.sprint.id}} {{record.sprint.title}} {{record.tickets|length}}</h4>
+                {% endfor %}
+                
+                </a>
+            </div>
+        </div> -->
